welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.error
MethodsDogHouse:6: error: not found: value poseBrosse
	poseBrosse();
        ^