welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.code
def dogHouse();
{
for (i <- 0 to 3 )
{
	poseBrosse();
	avance();
	avance();
	gauche();
}
}